--- a/public/styles.css
+++ b/public/styles.css
@@ -1,46 +1,110 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
 
-html, body {
-    height: 100%;
-  }
+main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin: 48px;
+}
+
+main .messages {
+  width: 560px;
+  height: 460px;
+
+  border: 1px solid #f0f0f5;
+  border-radius: 8px;
+}
+
+main form {
+  width: 560px;
+  height: 460px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  /* border: 1px solid red; */
+}
+
+main form label {
+  margin-bottom: 12px;
+
+  font-weight: bold;
+}
+
+main form input+label {
+  margin-top: 12px;
+}
+
+main form #username {
+  height: 36px;
+
+  border: 1px solid #f0f0f5;
+  border-radius: 8px;
+}
+
+main form #message {
+  height: 200px;
+
+  border: 1px solid #f0f0f5;
+  border-radius: 8px;
+}
+
+main form button {
+  width: 100%;
+
+  font-weight: bold;
+  font-size: 14px;
+
+  line-height: 36px;
+
+  color: white;
+  background-color: blue;
+
+  border: none;
+  border-radius: 8px;
+}
+
+/* form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#chat {
+  height: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+input {
+  width: 600px;
+  border: 1px solid #ddd;
+  height: 50px;
+  padding: 0 20px;
+  font-size: 14px;
+}
+
+button {
+  width: 600px;
+  height: 50px;
+  font-size: 14px;
+  background: #069;
+  text-align: center;
+  line-height: 50px;
+  font-weight: bold;
+  color: #FFF;
+  margin-top: 10px;
+}
+*/
   
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  #chat {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  input {
-    width: 600px;
-    border: 1px solid #ddd;
-    height: 50px;
-    padding: 0 20px;
-    font-size: 14px;
-  }
-  
-  button {
-    width: 600px;
-    height: 50px;
-    font-size: 14px;
-    background: #069;
-    text-align: center;
-    line-height: 50px;
-    font-weight: bold;
-    color: #FFF;
-    margin-top: 10px;
-  }
-  
-  .messages {
-    width: 600px;
-    height: 400px;
-    margin: 20px 0;
-    border: 1px solid #ddd;
-    padding: 20px;
-  }
