--- a/public/styles.css
+++ b/public/styles.css
@@ -57,7 +57,13 @@ main form label {
 }
 
 main form input {
+  padding: 0 24px;
+
   background-color: white;
+
+  border-radius: 8px;
+
+  outline: none;
 }
 
 main form input+label {
@@ -68,14 +74,14 @@ main form #username {
   height: 36px;
 
   border: 1px solid #f0f0f5;
-  border-radius: 8px;
+  
 }
 
 main form #message {
   height: 200px;
 
   border: 1px solid #f0f0f5;
-  border-radius: 8px;
+  
 }
 
 main form button {
@@ -93,40 +99,3 @@ main form button {
   border-radius: 8px;
 }
 
-/* form {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#chat {
-  height: 100%;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-input {
-  width: 600px;
-  border: 1px solid #ddd;
-  height: 50px;
-  padding: 0 20px;
-  font-size: 14px;
-}
-
-button {
-  width: 600px;
-  height: 50px;
-  font-size: 14px;
-  background: #069;
-  text-align: center;
-  line-height: 50px;
-  font-weight: bold;
-  color: #FFF;
-  margin-top: 10px;
-}
-*/
-  
